--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         </ul>
         <h3>
             <ol>
-                <li><a herf="1.html">차시</a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
-                <li><a herf=""></a></li>
+                <li><a href="1.html">차시</a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
             </ol>
         </h3>
     </p>
