--- a/day1.html
+++ b/day1.html
@@ -7,7 +7,8 @@
     <title>1차시 계획</title>
 </head>
 <body>
-    <h1>궁극적인 목표:세특에 잘 쓰이기</h1>
+    <h1>1차시</h1>
+    <h3>궁극적인 목표:세특에 잘 쓰이기</h3>
     <p>
         <ol>
             <li>선생님 한테 잘 보인다<br>-> 열심히 한다(성실히)</li>
@@ -41,5 +42,6 @@
             </li>
         </ol>
     </p>
+    <input type="button" value="돌아가기" onclick="location.href='index.html'">
 </body>
 </html>
