--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
         <h3>
             <ol>
-                <li><a href="day1.html">차시</a></li>
+                <li><a href="day1.html">1차시</a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
