--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h3>
             <ol>
                 <li><a href="day1.html">1차시</a></li>
-                <li><a href=""></a></li>
+                <li><a href="day2.html">2차시</a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
