--- a/day1.html
+++ b/day1.html
@@ -8,21 +8,22 @@
 </head>
 <body>
     <h1>1차시: 활동 계획</h1>
-    <h3>궁극적인 목표: 세특에 잘 쓰이기</h3>
+    <h3>궁극적인 목표: python언어와 python을 이용한 피지컬 컴퓨팅에 대한 깊은 이해</h3>
     <p>
         <ol>
-            <li>선생님 한테 잘 보인다<br>-> 열심히 한다(성실히)</li>
-            <li>일상생활에 쓸모있는 돈이 되는것 예쁜거 만들기(파이썬)
+            <li>성실히 참여하기</li>
+            <li>일상생활에 쓸모있는 장치 만들기(파이썬)<br>
                 파이썬 가르치기</li>
             <li>
                 <ul>
                     <li>
-                        1학기 - 아두이노로 뭐시기 만들기
-                        바퀴달리고 굴러가고 움직이고 카메라 있고 예쁘고 실용적인거<br>
+                        1학기 - 아두이노로 제작<br>바퀴달리고 굴러가고 움직이고 카메라 있고 실용적인 장치
                         <ol>
                             <li>파이썬 배우기</li>
                             <li>아두이노 연결하기</li>
-                            <li>아두이노에 바퀴 달기</li>
+                            <li>아두이노에 바퀴 달기<br>
+                            물주는 기계, 자동차
+                            </li>
                             <li>코딩하기</li>
                             <li>실행하기</li>
                             <li>자아성찰</li>
