add day3 and 4, add imgs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>
         <h1>pythonic</h1>
+        <img src="PYTHONIC_logo.png">
     </p>
     <p>
         <ul>
@@ -18,7 +19,7 @@
             <ol>
                 <li><a href="day1.html">1차시</a></li>
                 <li><a href="day2.html">2차시</a></li>
-                <li><a href=""></a></li>
+                <li><a href="day3.html">3차시</a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
