--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="day1.html">1차시</a></li>
                 <li><a href="day2.html">2차시</a></li>
                 <li><a href="day3.html">3차시</a></li>
-                <li><a href=""></a></li>
+                <li><a href="day4.html">4차시</a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
