--- a/day2.html
+++ b/day2.html
@@ -21,7 +21,7 @@
                         머신러닝 모델을 이용하여 다음에 올 값 예측
                     </li>
                 </ol>
-                <img src="https://gcdaeseong-h.gne.go.kr/upload/editor/20230329/IMG_195844.jpg">
+                <img src="https://gcdaeseong-h.gne.go.kr/upload/editor/20230329/IMG_195844.jpg", width: 100%>
             </li>
             <li>
                 연간 계획을 구체화하여 연간 계획서를 작성하고 Pythonic Record 웹사이트(https://distortedspacetime.github.io/Pythonic-club/index.html)에 2차시 활동내용 추가.
