edited img size

--- a/day4.html
+++ b/day4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4차시 활동 내용</title>
-    <img src="PYTHONIC_logo.png">
+    <img width="900px" src="PYTHONIC_logo.png">
 </head>
 <body>
     <h1>4차시: 주식 자동매매 프로그램 탐구 및 아두이노에 대한 기초 지식 공부</h1>
@@ -27,7 +27,7 @@
 
             </li>
         </ul>
-        <img src="https://gcdaeseong-h.gne.go.kr/upload/editor/20230412/IMG_204527.png">
+        <img width="300px" src="https://gcdaeseong-h.gne.go.kr/upload/editor/20230412/IMG_204527.png">
     </p>
     <input type="button" value="돌아가기" onclick="location.href='index.html'">
 </body>
