--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>
         <h1>pythonic</h1>
-        <img src="PYTHONIC_logo.png">
+        <img width="900px" src="PYTHONIC_logo.png">
     </p>
     <p>
         <ul>
