--- a/day1.html
+++ b/day1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1차시 계획</title>
-    <img src="PYTHONIC_logo.png">
+    <img width="900px" src="PYTHONIC_logo.png">
 </head>
 <body>
     <h1>1차시: 활동 계획</h1>
